some local arena and simple distance calculation